--- a/projects/creating_customer_segments/customer_segments.ipynb
+++ b/projects/creating_customer_segments/customer_segments.ipynb
@@ -35,11 +35,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wholesale customers dataset has 440 samples with 6 features each.\n"
+     ]
+    }
+   ],
    "source": [
     "# Import libraries necessary for this project\n",
     "import numpy as np\n",
@@ -71,11 +79,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fresh</th>\n",
+       "      <th>Milk</th>\n",
+       "      <th>Grocery</th>\n",
+       "      <th>Frozen</th>\n",
+       "      <th>Detergents_Paper</th>\n",
+       "      <th>Delicatessen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>440.000000</td>\n",
+       "      <td>440.000000</td>\n",
+       "      <td>440.000000</td>\n",
+       "      <td>440.000000</td>\n",
+       "      <td>440.000000</td>\n",
+       "      <td>440.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>12000.297727</td>\n",
+       "      <td>5796.265909</td>\n",
+       "      <td>7951.277273</td>\n",
+       "      <td>3071.931818</td>\n",
+       "      <td>2881.493182</td>\n",
+       "      <td>1524.870455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>12647.328865</td>\n",
+       "      <td>7380.377175</td>\n",
+       "      <td>9503.162829</td>\n",
+       "      <td>4854.673333</td>\n",
+       "      <td>4767.854448</td>\n",
+       "      <td>2820.105937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>55.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>3127.750000</td>\n",
+       "      <td>1533.000000</td>\n",
+       "      <td>2153.000000</td>\n",
+       "      <td>742.250000</td>\n",
+       "      <td>256.750000</td>\n",
+       "      <td>408.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>8504.000000</td>\n",
+       "      <td>3627.000000</td>\n",
+       "      <td>4755.500000</td>\n",
+       "      <td>1526.000000</td>\n",
+       "      <td>816.500000</td>\n",
+       "      <td>965.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>16933.750000</td>\n",
+       "      <td>7190.250000</td>\n",
+       "      <td>10655.750000</td>\n",
+       "      <td>3554.250000</td>\n",
+       "      <td>3922.000000</td>\n",
+       "      <td>1820.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>112151.000000</td>\n",
+       "      <td>73498.000000</td>\n",
+       "      <td>92780.000000</td>\n",
+       "      <td>60869.000000</td>\n",
+       "      <td>40827.000000</td>\n",
+       "      <td>47943.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Fresh          Milk       Grocery        Frozen  \\\n",
+       "count     440.000000    440.000000    440.000000    440.000000   \n",
+       "mean    12000.297727   5796.265909   7951.277273   3071.931818   \n",
+       "std     12647.328865   7380.377175   9503.162829   4854.673333   \n",
+       "min         3.000000     55.000000      3.000000     25.000000   \n",
+       "25%      3127.750000   1533.000000   2153.000000    742.250000   \n",
+       "50%      8504.000000   3627.000000   4755.500000   1526.000000   \n",
+       "75%     16933.750000   7190.250000  10655.750000   3554.250000   \n",
+       "max    112151.000000  73498.000000  92780.000000  60869.000000   \n",
+       "\n",
+       "       Detergents_Paper  Delicatessen  \n",
+       "count        440.000000    440.000000  \n",
+       "mean        2881.493182   1524.870455  \n",
+       "std         4767.854448   2820.105937  \n",
+       "min            3.000000      3.000000  \n",
+       "25%          256.750000    408.250000  \n",
+       "50%          816.500000    965.500000  \n",
+       "75%         3922.000000   1820.250000  \n",
+       "max        40827.000000  47943.000000  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Display a description of the dataset\n",
     "display(data.describe())"
@@ -91,14 +218,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[154]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[85]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "all_prod_sum = data.sum(axis=1)\n",
+    "display(all_prod_sum[all_prod_sum == min(all_prod_sum)].index.tolist())\n",
+    "display(all_prod_sum[all_prod_sum == max(all_prod_sum)].index.tolist())\n",
+    "display(all_prod_sum[(all_prod_sum < np.mean(all_prod_sum)+100) & \\\n",
+    "                     (all_prod_sum > np.mean(all_prod_sum))].index.tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chosen samples of wholesale customers dataset:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fresh</th>\n",
+       "      <th>Milk</th>\n",
+       "      <th>Grocery</th>\n",
+       "      <th>Frozen</th>\n",
+       "      <th>Detergents_Paper</th>\n",
+       "      <th>Delicatessen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>622</td>\n",
+       "      <td>55</td>\n",
+       "      <td>137</td>\n",
+       "      <td>75</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>16117</td>\n",
+       "      <td>46197</td>\n",
+       "      <td>92780</td>\n",
+       "      <td>1026</td>\n",
+       "      <td>40827</td>\n",
+       "      <td>2944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7057</td>\n",
+       "      <td>9810</td>\n",
+       "      <td>9568</td>\n",
+       "      <td>1762</td>\n",
+       "      <td>3293</td>\n",
+       "      <td>1776</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Fresh   Milk  Grocery  Frozen  Detergents_Paper  Delicatessen\n",
+       "0    622     55      137      75                 7             8\n",
+       "1  16117  46197    92780    1026             40827          2944\n",
+       "2   7057   9810     9568    1762              3293          1776"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# TODO: Select three indices of your choice you wish to sample from the dataset\n",
-    "indices = []\n",
+    "indices = [154,85,1]\n",
     "\n",
     "# Create a DataFrame of the chosen samples\n",
     "samples = pd.DataFrame(data.loc[indices], columns = data.keys()).reset_index(drop = True)\n",
@@ -117,10 +353,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fresh\tMilk\tGrocery\tFrozen\tDP\tDelicatessen\n",
+      "21.0 \t29.0 \t29.0 \t5.0 \t10.0 \t5.0 \t\n",
+      "42.0 \t18.0 \t24.0 \t8.0 \t4.0 \t5.0 \t"
+     ]
+    }
+   ],
+   "source": [
+    "print \"Fresh\tMilk\tGrocery\tFrozen\tDP\tDelicatessen\"\n",
+    "third = [7057,9810,9568,1762,3293,1776]\n",
+    "avg = [8504.000000,3627.000000,4755.500000,1526.000000,816.500000,965.500000]\n",
+    "for item in third:\n",
+    "    print round(100*float(item)/sum(third),0),\"\\t\",\n",
+    "print\n",
+    "for item in avg:\n",
+    "    print round(100*item/sum(avg),0),\"\\t\","
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:** \n",
+    "- The first one looks like an **individual customer** with so little annual spendings which are way below the bottom 25th percentile in all the product categories.\n",
+    "- The second one's spending for each of the product is way beyond the 75th percentile and is even maximum for many of the product categories. It is most probably a **market**.\n",
+    "- The third one's relative spending on 'Fresh' is disproportionately lower than the averages while the spending on milk, grocery and detergent paper is higher. The spending pattern might resemble that of a **restaurant**."
    ]
   },
   {
@@ -751,10 +1018,11 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -766,7 +1034,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
