--- a/projects/creating_customer_segments/customer_segments.ipynb
+++ b/projects/creating_customer_segments/customer_segments.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -407,23 +407,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.681884008544\n"
+     ]
+    }
+   ],
    "source": [
+    "from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.metrics import r2_score\n",
+    "\n",
     "# TODO: Make a copy of the DataFrame, using the 'drop' function to drop the given feature\n",
-    "new_data = None\n",
+    "new_data = data.copy()\n",
+    "X = new_data[['Fresh','Milk','Frozen','Detergents_Paper','Delicatessen']]\n",
+    "y = new_data[['Grocery']]\n",
     "\n",
     "# TODO: Split the data into training and testing sets using the given feature as the target\n",
-    "X_train, X_test, y_train, y_test = (None, None, None, None)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42)\n",
     "\n",
     "# TODO: Create a decision tree regressor and fit it to the training set\n",
-    "regressor = None\n",
+    "regressor = DecisionTreeRegressor(random_state=42)\n",
+    "\n",
+    "regressor.fit(X_train, y_train)\n",
+    "y_pred = regressor.predict(X_test)\n",
     "\n",
     "# TODO: Report the score of the prediction using the testing set\n",
-    "score = None"
+    "score = r2_score(y_test, y_pred)\n",
+    "\n",
+    "print score\n"
    ]
   },
   {
@@ -431,7 +450,7 @@
    "metadata": {},
    "source": [
     "### Question 2\n",
-    "*Which feature did you attempt to predict? What was the reported prediction score? Is this feature is necessary for identifying customers' spending habits?*  \n",
+    "*Which feature did you attempt to predict? What was the reported prediction score? Is this feature necessary for identifying customers' spending habits?*  \n",
     "**Hint:** The coefficient of determination, `R^2`, is scored between 0 and 1, with 1 being a perfect fit. A negative `R^2` implies the model fails to fit the data."
    ]
   },
@@ -439,7 +458,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:** I attempted to predict **Grocery** using other features and got an **`R^2`** value of **`68.2%`** which is not a very strong fit. Ignoring this feature would definitely result in some performance loss but I would **vote for dropping it** for the sake of simplicity (dimensionality reduction)."
    ]
   },
   {
