--- a/projects/smartcab/smartcab.ipynb
+++ b/projects/smartcab/smartcab.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -79,7 +79,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:** \n",
+    "- No, the Smartcab does not move.\n",
+    "\n",
+    "- Following are the rewards that our driving agent is receiving:\n",
+    "    - *Agent idled at a green light with no oncoming traffic.* (Negative Reward)\n",
+    "    - *Agent properly idled at a red light.* (Positive Reward)\n",
+    "    - *Agent idled at a green light with oncoming traffic.* (Positive Reward)\n",
+    " \n",
+    "- Since the car is not moving,\n",
+    "    - if the light goes red, the agent gets positive reward for not moving\n",
+    "    - if it goes green and there is oncoming traffic, it gets positive reward for not moving.\n",
+    "    - if it goes green and there is no oncoming traffic, it gets negative reward for not moving."
    ]
   },
   {
@@ -105,7 +116,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "- `agent.py`\n",
+    "    - The Learning flag is set to True will put the agent in learning mode.\n",
+    "    - "
    ]
   },
   {
