--- a/projects/smartcab/smartcab.ipynb
+++ b/projects/smartcab/smartcab.ipynb
@@ -242,7 +242,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "**Most relevant features**\n",
+    "- `waypoint`: Will guide us towards the destination if we have competing actions with similar rewards\n",
+    "- `light`: Important for safety and efficiency in knowing when to drive forward or left or stay idle.\n",
+    "- `oncoming`: This will prevent us from any collision, important for safety and efficiency.\n",
+    "- `left`: Important to know whether we can safely go right.\n",
+    "\n",
+    "**Less relevant features ommitted to contain the size of state space**\n",
+    "- `right`: Ommitted because decision to go right can be taken even when light is red and it seems less important than left.\n",
+    "- `deadline`: Not important for safety. Also, adding waypoint will cover many cases required for deadline, so excluding this, we can safely keep our model less complex."
    ]
   },
   {
@@ -270,7 +279,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "- Possible states for \n",
+    "    - `waypoint`: [forward, left, right], \n",
+    "    - `light`: [Red, Green],\n",
+    "    - `oncoming`: [None, forward, left, right], \n",
+    "    - `left`: [None, forward, left, right]\n",
+    "Therefore the number of possible states are 3 x 2 x 4 x 4 = 96.\n",
+    "\n",
+    "The agent should not take too long to learn the correct policy for each such state since this is not a huge number, as state sizes typically be of order 2^n. "
    ]
   },
   {
