Reinforcement Learning Sub-2

--- a/projects/smartcab/smartcab.ipynb
+++ b/projects/smartcab/smartcab.ipynb
@@ -479,6 +479,13 @@
     "- 94 trials we required for the agent before testing started.\n",
     "- I used an epsilon tolerance of 0.01 and an alpha of 0.9. I set the alpha to decrease linearly by 0.03 till it reaches a value of 0.2. After considerable number of trials, I would want the ensuing rewards to affect the Qvalues to lesser extent.\n",
     "- It shows a huge improvement from F to A+.\n",
+    "\n",
+    "|| Improved Learner | Default Learner |\n",
+    "|------|------|------|\n",
+    "|   **Bad Actions**  | 'Total' curve decline is very steep. Almost zero at the end | Decline not as steep and flattens out at the end|\n",
+    "|   **Reliability**  | No particular pattern. Although the value is higher for most of the trials | Increase in reliability is slow, maxes out at 60%|\n",
+    "|   **Avg. Reward**  | Goes north of 0 with successive trials as accidents/violations goto near zero| Highly penalizing accidents never let the score go positive|\n",
+    "\n",
     "- For the given test set of 10, the driving agent seems to have learnt the right policy to a great extent.\n",
     "- True, but one can be absolutely sure only if replication of the results yield consistently high safety ratings and good reliability rating."
    ]
@@ -509,6 +516,7 @@
     "    - (waypoint, light, oncoming, left) # Format\n",
     "    - ('right', 'green', None, 'right'), we should move right since waypoint is on that direction and there is no risk of crashing.\n",
     "    - ('forward', 'green', 'forward', None), we should move forward for similar reasons as above.\n",
+    "    - ('forward', 'red', 'left', None), we should not move as it would cause crash.\n",
     "    \n",
     "Lets see where our agent is not taking the right decision:\n",
     "    - ('right', 'green', None, 'right')\n",
@@ -516,14 +524,15 @@
     "         -- right : 0.00\n",
     "         -- None : 0.00\n",
     "         -- left : 0.15\n",
-    "    Ideally, the agent should go right, but the Q-table suggests moving forward.\n",
+    "    Ideally, the agent should go right, but the Q-table suggests moving forward since moving forward will provide the highest incentive.\n",
     "    \n",
     "    - ('left', 'red', 'left', 'right')\n",
     "         -- forward : -18.88\n",
     "         -- right : 0.72\n",
     "         -- None : 0.00\n",
     "         -- left : -8.06\n",
-    "    Here, the agent should choose not to move, but the Q-table wrongly suggests right."
+    "     Here, the agent should choose not to move, but the Q-table wrongly suggests right as it has the highest reward (Q-value). \n",
+    "Typically, such wrong decisions can be related to either the agent being in initial stages of learning, or due to a randomly chosen decision."
    ]
   },
   {
